test/snapshots/wipple_test__trig.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "True"
  - "True"
  - "False"
