test/snapshots/wipple_test__type-arithmetic.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics:
  - location:
      path: tests/type-arithmetic.test.wipple
      start:
        line: 12
        column: 4
        index: 272
      end:
        line: 12
        column: 15
        index: 283
    severity: error
    message: Could not determine the meaning of this code
    description: "Wipple needs more information before it can run this code. Its type is `_ -> S (S (S (S (S Z))))`, but the `_` placeholders are unknown."
output: []
