test/snapshots/wipple_test__type-states.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/type-states.test.wipple:24:5: error: expected a hovering drone here, but found an idle drone
