test/snapshots/wipple_test__undefined-math-ops.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
undefined
undefined
undefined
undefined
undefined
