test/snapshots/wipple_test__undefined-name.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - location:
      path: tests/undefined-name.test.wipple
      start:
        line: 2
        column: 0
        index: 19
      end:
        line: 2
        column: 3
        index: 22
    severity: error
    template:
      id: unresolved-name
      data:
        name: foo
output: []
