test/snapshots/wipple_test__unknown-type-with-bounds.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics:
  - location:
      path: tests/unknown-type-with-bounds.test.wipple
      start:
        line: 7
        column: 0
        index: 88
      end:
        line: 7
        column: 1
        index: 89
    severity: error
    message: Could not determine the meaning of this code
    description: "Wipple needs more information before it can run this code. Try assigning `x` to a variable using `:`, and then use it somewhere else in the program, to help Wipple determine its meaning."
output: []
