test/snapshots/wipple_test__unresolved-type-multiple-parameters.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - location:
      path: tests/unresolved-type-multiple-parameters.test.wipple
      start:
        line: 8
        column: 6
        index: 93
      end:
        line: 8
        column: 7
        index: 94
    severity: error
    template:
      id: unknown-type
      data: {}
  - location:
      path: tests/unresolved-type-multiple-parameters.test.wipple
      start:
        line: 16
        column: 15
        index: 237
      end:
        line: 16
        column: 16
        index: 238
    severity: error
    template:
      id: unknown-type
      data: {}
  - location:
      path: tests/unresolved-type-multiple-parameters.test.wipple
      start:
        line: 17
        column: 20
        index: 259
      end:
        line: 17
        column: 21
        index: 260
    severity: error
    template:
      id: unknown-type
      data: {}
output: []
