test/snapshots/wipple_test__unused.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/unused.test.wipple:15:1: error: this is important and must be handled
