test/snapshots/wipple_test__unzip.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "Left:"
  - "1"
  - "2"
  - "3"
  - "Right:"
  - a
  - b
  - c
