test/snapshots/wipple_test__when-mismatched-types.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/when-mismatched-types.test.wipple:5:12: error: expected a number here, but found text
